--- a/src/views/shop/carrito.ejs
+++ b/src/views/shop/carrito.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../../../public/estilos/login.css" />
+    <link rel="stylesheet" href="/estilos/styleCart.css" />
   </head>
   <body>
     <%- include('../partials/header') %>
@@ -67,12 +67,10 @@
                 <p class="cart__resumen-numbers-amount">0</p>
               </div>
               <div class="cart__resumen-numbers-subtotal">
-                <span>$</span>
-                <p class="cart__resumen-numbers-subtotal-value">0</p>
+                <p class="cart__resumen-numbers-subtotal-value">$ 0</p>
               </div>
               <div class="cart__resumen-numbers-subtotal">
-                <span>$</span>
-                <p class="cart__resumen-numbers-envio-value">300</p>
+                <p class="cart__resumen-numbers-envio-value">$ 0</p>
               </div>
             </div>
           </div>
@@ -82,8 +80,7 @@
             <div class="cart__resumen-total-payment">
               <p>TOTAL</p>
               <div class="cart__resumen-numbers-subtotal">
-                <span>$</span>
-                <p class="cart__resumen-numbers-total">0</p>
+                <p class="cart__resumen-numbers-total">$ 0</p>
               </div>
             </div>
           </div>
@@ -98,7 +95,7 @@
       src="https://kit.fontawesome.com/d82e4588df.js"
       crossorigin="anonymous"
     ></script>
-    <script src="../../js-fede/carritoFunctions.js"></script>
+    <!-- <script src="../../js-fede/carritoFunctions.js"></script> -->
     <script src="../../js-fede/Carrito.js"></script>
   </body>
 </html>
