--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -37,7 +37,7 @@
           <h1 class="table__title--list">LISTADO DE PRODUCTOS</h1>
           <div class="table__title--agregar">
             <p>AGREGAR</p>
-            <a class="" href="../admin/create.html">
+            <a class="" href="/admin/create">
                 <i
                 class="fa-solid fa-plus bottom-decrease-increase title-list__add-bottom"
               ></i>
@@ -56,214 +56,23 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td data-title="ID">1</td>
-              <td data-title="Código">STW001001</td>
-              <td data-title="Nombre del producto">Baby Yoda Blueball</td>
-              <td data-title="Categoría">STAR WARS</td>
+            <% dataProducts.forEach((item) =>{%>
+              <td data-title="ID"><%= item.product_id %></td>
+              <td data-title="Código"><%= item.sku %></td>
+              <td data-title="Nombre del producto"><%= item.product_name %></td>
+              <td data-title="Categoría"><%=item.category_name%></td>
               <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
+               <div class="table__icons">
+                  <a class="table__icon" href="/admin/edit/<%=item.product_id%>">
+                   <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                   </a>
-                  <a class="table__icon" href="../admin/edit.html">
+                  <a class="table__icon" href="#">
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
                   </a>
                 </div>
               </td>
             </tr>
-            <tr>
-              <td data-title="ID">2</td>
-              <td data-title="Código">STW001002</td>
-              <td data-title="Nombre del producto">Boba Fett Fighter</td>
-              <td data-title="Categoría">STAR WARS</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">3</td>
-              <td data-title="Código">STW001003</td>
-              <td data-title="Nombre del producto">Luke Skylwalker & Grogu</td>
-              <td data-title="Categoría">STAR WARS</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">4</td>
-              <td data-title="Código">STW001004</td>
-              <td data-title="Nombre del producto">Stormtrooper Lightsaber</td>
-              <td data-title="Categoría">STAR WARS</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">5</td>
-              <td data-title="Código">PKM001001</td>
-              <td data-title="Nombre del producto">Charmander Smiley</td>
-              <td data-title="Categoría">POKEMON</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">6</td>
-              <td data-title="Código">PKM001002</td>
-              <td data-title="Nombre del producto">Dragonite Hi!</td>
-              <td data-title="Categoría">POKEMON</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">7</td>
-              <td data-title="Código">PKM001003</td>
-              <td data-title="Nombre del producto">Pidgeotto Flying</td>
-              <td data-title="Categoría">POKEMON</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">8</td>
-              <td data-title="Código">PKM001004</td>
-              <td data-title="Nombre del producto">Pikachu Smiley</td>
-              <td data-title="Categoría">POKEMON</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">9</td>
-              <td data-title="Código">PKM001005</td>
-              <td data-title="Nombre del producto">Vulpix Fancy</td>
-              <td data-title="Categoría">POKEMON</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">10</td>
-              <td data-title="Código">HPT001001</td>
-              <td data-title="Nombre del producto">Harry Potter & Hegwid</td>
-              <td data-title="Categoría">HARRY POTTER</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">11</td>
-              <td data-title="Código">HPT001002</td>
-              <td data-title="Nombre del producto">Herminione Ball Dress</td>
-              <td data-title="Categoría">HARRY POTTER</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">12</td>
-              <td data-title="Código">HPT001003</td>
-              <td data-title="Nombre del producto">Luna Lovegood Lion Mask</td>
-              <td data-title="Categoría">HARRY POTTER</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td data-title="ID">13</td>
-              <td data-title="Código">HPT001004</td>
-              <td data-title="Nombre del producto">Snape Patronus</td>
-              <td data-title="Categoría">HARRY POTTER</td>
-              <td>
-                <div class="table__icons">
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
-                  </a>
-                  <a class="table__icon" href="../admin/edit.html">
-                    <i class="fa-solid fa-trash listProducts__delete-info"></i>
-                  </a>
-                </div>
-              </td>
-            </tr>
+            <%});%>
           </tbody>
         </table>
       </section>
