--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -79,13 +79,13 @@
                                 <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
                                     <picture class="card-item__cover">
                                         <span class="card-item__tag">Nuevo</span>
-                                        <img class="card-item__img--front" src="<%= item.img_front  %>" alt="<%= item.product_description  %>">
-                                        <img class="card-item__img--back" src="<%= item.img_back %>" alt="<%= item.product_description  %>">
+                                        <img class="card-item__img--front" src="/img/multimedia/<%=item.image_front  %>" alt="<%= item.product_description  %>">
+                                        <img class="card-item__img--back" src="/img/multimedia/<%= item.image_back %>" alt="<%= item.product_description  %>">
                                     </picture>
                                     <div class="card-item__content">
                                         <p class="card-item__licence"><%= item.category_name %></p>
                                         <p class="card-item__name"><%= item.product_name %></p>
-                                        <p class="card-item__price">$ <%= item.product_price %></p>
+                                        <p class="card-item__price">$ <%= item.price %></p>
                                         <p class="card-item__promo"><%= item.dues %> CUOTAS SIN INTERÉS</p>
                                     </div>
                                 </a>
