--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -9,7 +9,7 @@
                     <a href="/auth/login" class="footer__link navbar__link">LOGIN</a>
                 </li>
                 <li class="footer__item">
-                    <a href="/contact" class="footer__link navbar__link">CONTACTO</a>
+                    <a href="" class="footer__link navbar__link">CONTACTO</a>
                 </li>
             </ul>
         </nav>
