--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -36,7 +36,7 @@
             </ul>
           </li>
           <li class="navbar__item">
-            <a href="/contact" class="navbar__link">CONTACTO</a>
+            <a href="" class="navbar__link">CONTACTO</a>
           </li>
           <li class="navbar__item">
             <a href="/auth/login" class="navbar__link">LOGIN</a>
