--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -30,7 +30,7 @@
       <article class="hero__content container">
         <h3 class="hero__title">Nuevos Ingresos</h3>
         <p class="hero__text">Descubri el proximo Funko Pop de tu coleccion</p>
-        <a class="hero__link" href="./shop/shop">SHOP</a>
+        <a class="hero__link" href="#">SHOP</a>
         <!-- con css agregamos la imagen de fondo -->
       </article>
     </section>
