--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -87,7 +87,7 @@
                       <p class="card-item__license">STAR WARS</p>
                       <h4 class="card-item__name"><%= item.product_name %></h4>
                       <p class="card-item__price">$<%= item.price %></p>
-                      <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                      <p class="card-item__promo"><%= item.dues %></p>
                     </div>
                     <picture class="card-item__cover">
                       <span class="card-item__tag">NUEVO</span>
